# BOEM

./: README.md  main.py  pyproject.toml
src/: app.py  infer.py  model.py  patchify.py  preprocess.py
src/nodule_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
